--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -7,7 +7,7 @@
     tools:context=".abcAulas">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Logingtv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/Logingtv"
         app:layout_constraintVertical_bias="0.732" />
 
     <Spinner
