--- a/app/src/main/res/layout/activity_abc_maestros.xml
+++ b/app/src/main/res/layout/activity_abc_maestros.xml
@@ -10,12 +10,12 @@
         android:id="@+id/txtApellidos"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="17dp"
         android:ems="10"
         android:hint="Apellidos"
         android:inputType="textPersonName"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/spAcademia"
+        app:layout_constraintBottom_toTopOf="@+id/spCrud"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
@@ -24,15 +24,28 @@
         android:id="@+id/txtNombre"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="126dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="39dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtApellidos"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtId" />
+
+    <EditText
+        android:id="@+id/txtId"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="42dp"
+        android:ems="10"
+        android:hint="ID"
+        android:inputType="textPersonName"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,8 +53,18 @@
         android:id="@+id/spAcademia"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="17dp"
         app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spCrud" />
+
+    <Spinner
+        android:id="@+id/spCrud"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/spAcademia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtApellidos" />
@@ -50,9 +73,9 @@
         android:id="@+id/btnGuardar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="139dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="#4CAF50"
-        android:hint="GUARDAR"
+        android:hint="GUARDAR CAMBIOS"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
