--- a/app/src/main/res/layout/activity_abc_maestros.xml
+++ b/app/src/main/res/layout/activity_abc_maestros.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <EditText
         android:id="@+id/txtApellidos"
         android:layout_width="0dp"
@@ -17,6 +18,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/spCrud"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
@@ -81,4 +83,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spAcademia" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
