--- a/app/src/main/res/menu/opcions_menu.xml
+++ b/app/src/main/res/menu/opcions_menu.xml
@@ -20,5 +20,9 @@
         android:id="@+id/Maestro"
         android:title="Maestros"
         />
+    <item
+        android:id="@+id/Salir"
+        android:title="Cerrar Cuenta"
+        />
 
 </menu>
