--- a/app/src/main/res/menu/opcions_menu.xml
+++ b/app/src/main/res/menu/opcions_menu.xml
@@ -23,6 +23,6 @@
     <item
         android:id="@+id/Salir"
         android:title="Cerrar Cuenta"
-        />
+        android:backgroundTint="@android:color/holo_red_dark" />
 
 </menu>
