--- a/app/src/main/res/layout/activity_inicio_de_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_de_sesion.xml
@@ -78,10 +78,14 @@
         android:id="@+id/imageView"
         android:layout_width="187dp"
         android:layout_height="160dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="56dp"
+        android:adjustViewBounds="false"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logotec" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
