--- a/app/src/main/res/layout/activity_abc_academia.xml
+++ b/app/src/main/res/layout/activity_abc_academia.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4AC51"
+    android:background="@drawable/f4"
     tools:context=".abcAcademia">
 
     <Spinner
