--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -5,7 +5,7 @@
     android:id="@+id/campoaula"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3F498A"
+    android:background="@drawable/f4"
     tools:context=".abcAulas">
 
     <TextView
