--- a/app/src/main/res/layout/activity_abc_carrera.xml
+++ b/app/src/main/res/layout/activity_abc_carrera.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AEDDEC"
+    android:background="@drawable/f4"
+
     tools:context=".abcCarrera">
 
     <Spinner
@@ -12,10 +13,10 @@
         android:layout_width="375dp"
         android:layout_height="43dp"
         app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
-        app:layout_constraintEnd_toEndOf="@+id/_dynamic"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toStartOf="@+id/_dynamic"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.412" />
 
     <TextView
         android:id="@+id/textView"
