--- a/app/src/main/res/layout/activity_abc_maestros.xml
+++ b/app/src/main/res/layout/activity_abc_maestros.xml
@@ -5,6 +5,8 @@
     android:id="@+id/Maestro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/f4"
+
     tools:context=".MainActivity">
 
 
