--- a/app/src/main/res/layout/activity_abc_carrera.xml
+++ b/app/src/main/res/layout/activity_abc_carrera.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/carrerapan"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f4"
 
+    android:background="@drawable/f4"
     tools:context=".abcCarrera">
 
     <Spinner
