--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -12,16 +12,16 @@
         android:id="@+id/Logingtv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="60dp"
         android:text="#Aulas"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/etNombre"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/etNombre"
+        app:layout_constraintEnd_toEndOf="@+id/edNombreAula"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="@+id/edNombreAula"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etNombre"
+        android:id="@+id/edNombreAula"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="460dp"
@@ -36,23 +36,38 @@
         app:layout_constraintVertical_bias="0.732" />
 
     <Spinner
-        android:id="@+id/spAccion"
+        android:id="@+id/spinerAula"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/etNombre"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
         tools:layout_editor_absoluteX="1dp" />
 
     <Button
-        android:id="@+id/btnAceptar"
+        android:id="@+id/btnAceptarAu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="252dp"
+        android:layout_marginTop="100dp"
         android:text="Aceptar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spAccion"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/spinerAula" />
+
+    <EditText
+        android:id="@+id/edIDAula"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="ID Aula"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/edNombreAula"
+        app:layout_constraintStart_toStartOf="@+id/edNombreAula"
+        tools:layout_editor_absoluteY="327dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.623803" />
 </androidx.constraintlayout.widget.ConstraintLayout>
