--- a/app/src/main/res/layout/activity_abc_carrera.xml
+++ b/app/src/main/res/layout/activity_abc_carrera.xml
@@ -23,12 +23,11 @@
         android:id="@+id/textView"
         android:layout_width="163dp"
         android:layout_height="52dp"
-        android:layout_marginTop="48dp"
-        android:text="NOMBRE"
+        android:text="Carreras"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnGuardar"
@@ -41,17 +40,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="CARRERAS"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -71,7 +59,7 @@
         android:id="@+id/edNOMBRE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="132dp"
         android:ems="10"
         android:hint="Nombre Carrera"
         android:inputType="textPersonName"
@@ -92,6 +80,7 @@
         app:layout_constraintEnd_toEndOf="@+id/edNOMBRE"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/edNOMBRE"
-        app:layout_constraintTop_toBottomOf="@+id/edNOMBRE" />
+        app:layout_constraintTop_toBottomOf="@+id/edNOMBRE"
+        app:layout_constraintVertical_bias="0.206" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
